--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
 	"type": "module",
 	"private": true,
 	"devDependencies": {
+		"@biomejs/biome": "2.3.11",
 		"@types/bun": "latest",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7"
 	},
 	"scripts": {
 		"dev": "bun run src/index.ts",
-		"prepare": "husky"
+		"prepare": "husky",
+		"bioime": "bunx biome check --write"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
