--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"private": true,
 	"devDependencies": {
 		"@biomejs/biome": "2.3.11",
+		"@commitlint/cli": "^20.3.1",
+		"@commitlint/config-conventional": "^20.3.1",
 		"@types/bun": "latest",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7"
